# daml-shape-completion

./: README.md  check_requirements.lua  check_requirements.py
aml/: clean.json  encoder_test.py  kitti.json  noisy.json
daml/: encoder_test.lua  encoder_test.py  encoder_train.lua
data/: README.md
data/kitti/: 12_11_visualize_binvox_points.py  12_11_visualize_binvox_points.sh  12_15_visualize_binvox_space.py  12_15_visualize_binvox_space.sh  12_8_visualize_points.py  12_8_visualize_points.sh  12_9_visualize_gt.py  12_9_visualize_gt.sh  1_extract_bounding_boxes.py  2_a_split_kitti.py  2_b_split_kitti_detections.py  3_voxelize_kitti.sh  4_fast_post_process.py  5_compute_ltsdf.py  6_1_sanity_check.py  6_2_sanity_check2.py  6_3_check_sdf.py  7_a_compute_validation_statistics.py  7_b_compute_training_statistics.py  TrackletXML.py  common.py
data/kitti/config/: training_padding_corrected.json  training_padding_corrected_high.json  training_padding_corrected_medium.json  validation_gt_padding_corrected.json  validation_gt_padding_corrected_high.json  validation_gt_padding_corrected_medium.json
data/kitti/libvoxelizekitti/: CMakeLists.txt  voxelize_kitti.cpp
data/kitti/libvoxelizekitti/box/: box.cc
data/kitti/libvoxelizekitti/cmake/: FindJsonCPP.cmake
data/kitti/libvoxelizekitti/icp/: icp.cpp  icp.h  icpPointToPoint.cpp
data/lib/: blender_utils.py  import_off.py  mesh.py  point_cloud.py  utils.py  visualization.py
data/shapenet/: create_dataset.py  fast_post_process_cars.py  multiply_cars.py  render_cars.py  sanity_check.py  scale_cars.py  simplified.txt  simplify_cars.m  simplify_cars_file.m  split_cars.py
data/shapenet/config/clean.large/: training_inference.json  training_prior.json  validation.json
data/shapenet/config/noisy.large/: training_inference.json  training_prior.json  validation.json
data/shapenet/config/test/: training_inference.json  training_prior.json  validation.json
data/shapenet/libsimplifymesh/: README.md  README.txt  modelEnergy.m  run_semiConvexHull.m  sampleSurfacePoints.m  semiConvexHull.m
data/shapenet/libsimplifymesh/qslim/: qslim.m  qslim_osx  qslim_x86_32  qslim_x86_64
data/shapenet/libsimplifymesh/remesher/: Makefile  Makefile.dep  main.cc  remesher.m
data/shapenet/libsimplifymesh/remesher/libgmm/: gmm_std.h
data/shapenet/libsimplifymesh/remesher/libremesh/: Makefile  Makefile.dep  averageplane.cc  averageplane.h  cvtstats.cc  cvtstats.h  defines.h  delaunayflips.cc  delaunayflips.h  densityfield.cc  densityfield.h  densitytriangle2.h  edgeflips.cc  edgeflips.h  elapsedtimer.h  exception.h  featureedges.cc  featureedges.h  gslhelpers.h  gslpolysolve.cc  gslpolysolve.h  halfedge.h  helpers.cc  helpers.h  hrtimer.h  incdelaunay.cc  incdelaunay.h  interface.cc  interface.h  logging.h  mathhelpers.h  matrix2.h  matrix3.h  matrix4.h  meshcleanup.cc  meshcleanup.h  meshdecimation.cc  meshdecimation.h  meshoptimize.cc  meshoptimize.h  (+72 more)
data/shapenet/libvoxelizecloud/: CMakeLists.txt  voxelize_clouds.cpp
data/shapenet/libvoxelizecloud/box_ray/: box.h  ray.h  vector3.h
data/shapenet/libvoxelizecloud/cmake/: FindDLib.cmake  FindJsonCPP.cmake
data/shapenet/libvoxelizemesh/: CMakeLists.txt  README.md  voxelize_meshs.cpp
data/shapenet/libvoxelizemesh/box_ray/: box.cc  box.h  ray.h  vector3.h
data/shapenet/libvoxelizemesh/cmake/: FindEigen3.cmake
data/shapenet/libvoxelizemesh/triangle_point/: makelevelset3.cpp  makelevelset3.h
data/tools/cpp/: CMakeLists.txt  read_off.cpp  read_txt.cpp
data/tools/lua/: compress_model_dat.lua  read_hdf5.lua
data/tools/py/: bounding_box.py  correct_hdf5_chunking.py  read_bounding_boxes.py  read_hdf5.py
engelmann/: CMakeLists.txt
engelmann/apps/: kitti.h  kitti_shapeprior.cpp  shapenet.h  shapenet_shapeprior.cpp
engelmann/cmake_modules/: FindCeres.cmake  FindEigen3.cmake  FindOpenCV.cmake  FindSuiteSparse.cmake  FindVIZ.cmake
engelmann/dependencies/: install_Ceres.sh  install_Eigen.sh  install_GLog.sh  install_OpenBLAS.sh  install_OpenCV2.sh  install_SuiteSparse.sh  install_VTK.sh  install_gflags.sh
engelmann/src/: io.cpp  io.h  tracking.h  utils.cpp  utils.h
engelmann/src/optimization/: pose.cpp  pose.h
engelmann/tools/: kitti_marching_cubes.py  shapenet_marching_cubes.py
lib/py/: utils.py
lib/th/: AutoEncoder.lua  FixedVarianceGaussianNLLCriterion.lua  FreeSpaceBCECriterion.lua  GaussianBCECriterion.lua  GaussianFreeSpaceBCECriterion.lua  GaussianKullbackLeiblerDivergence.lua  GaussianPointBCECriterion.lua  GaussianReparameterizationSampler.lua  GaussianToBernoulli.lua  MaximumLikelihoodPrior.lua  MultipleCriterion.lua  PerChannelCriterion.lua  PerChannelNonLinearity.lua  PointBCECriterion.lua  Utils.lua  VariationalAutoEncoder.lua  WeightInitialization.lua  WeightedBCECriterion.lua  WeightedFreeSpaceBCECriterion.lua  WeightedGaussianBCECriterion.lua  WeightedGaussianFreeSpaceBCECriterion.lua  init.lua
ml/: clean.json  kitti.json  ml_test.py  ml_train.lua  noisy.json
sup/: clean.json  kitti.json  noisy.json  vae_test.lua  vae_test.py  vae_train.lua
vae/: clean.json  vae_test.lua  vae_test.py  vae_train.lua
